--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -37,13 +37,19 @@ jobs:
           plugin_activity_limit: 5
           plugin_activity_load: 300
           plugin_activity_visibility: all
+          plugin_calendar: yes
+          plugin_code: yes
+          plugin_contributors: yes
+          plugin_discussions: yes
           plugin_followup: yes
           plugin_followup_sections: repositories
+          plugin_gists: yes
           plugin_habits: yes
           plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
+          plugin_introduction: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -56,15 +62,23 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_licenses: yes
           plugin_lines: yes
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_notable_types: commit
+          plugin_people: yes
           plugin_projects: yes
           plugin_projects_limit: 4
+          plugin_reactions: yes
           plugin_repositories: 100
           plugin_repositories_affiliations: owner
           plugin_repositories_batch: 100
-          plugin_repositories_featured: thaunknown/miru, thaunknown/pwa-haven
+          plugin_repositories_featured: saveweb/wikiteam3, saveweb/DokuWiki-Dumper
+          plugin_skyline: yes
           plugin_stargazers: yes
           plugin_stargazers_charts_type: classic
+          plugin_starlists: yes
+          plugin_stars: yes
+          plugin_topics: yes
+          plugin_traffic: yes
