--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,6 +21,7 @@ jobs:
           #  - read:user (for user related data)
           #  - repo      (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.base.json
 
           # Options
           user: Exorcism0666
